--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 torch>=2.2
 torchvision>=0.17
-pandas numpy scikit-learn pillow albumentations tqdm pyyaml matplotlib
+pandas
+numpy
+scikit-learn
+pillow
+albumentations
+tqdm
+pyyaml
+matplotlib
