--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,1 +1,25 @@
+# src/config.yaml
+data:
+  train_manifest: data/interim/train_manifest.csv
+  val_manifest:   data/interim/val_manifest.csv
+  test_manifest:  data/interim/test_manifest.csv
+  num_workers: 4
 
+model:
+  arch: resnet18          # future-proof if you add more back-bones
+  pretrained: true
+  num_classes: 2
+
+train:
+  epochs: 20
+  batch_size: 32
+  lr: 1e-4
+  weight_decay: 1e-4
+  scheduler: cosine       # options: cosine | reduce_on_plateau | none
+  early_stopping_patience: 5
+  class_weights: [0.75, 1.25]   # Normal, COVID (handles imbalance)
+
+logging:
+  save_dir: checkpoints
+  tensorboard: true
+  tb_logdir: runs
